--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm navbar-dark fixed-top" style="backdrop-filter: blur(10px);">
+    <nav class="navbar navbar-expand-sm navbar-dark fixed-top" style="backdrop-filter: blur(10px); background-color: rgba(0, 0, 0, 0.5);">
         <div class="container-fluid" data-aos="fade-in" data-aos-delay="250">
             <a class="navbar-brand text-light" href="#">Jupstron</a>
             <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"
