--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm navbar-dark fixed-top" style="backdrop-filter: blur(10px); background-color: rgba(0, 0, 0, 0.5);">
+    <nav class="navbar navbar-expand-sm navbar-dark fixed-top"
+        style="backdrop-filter: blur(10px); background-color: rgba(0, 0, 0, 0.5);">
         <div class="container-fluid" data-aos="fade-in" data-aos-delay="250">
             <a class="navbar-brand text-light" href="#">Jupstron</a>
             <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"
@@ -60,14 +61,7 @@
                         </strong>
                         .
                     </p>
-                    <!-- <svg width="100" height="100" xmlns="http://www.w3.org/2000/svg">
-                        <path stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0" stroke-miterlimit="4"
-                            stroke="rgb(255,255,255)" stroke-opacity="1" stroke-width="3"
-                            d="M32.16999816894531,11.5 C32.16999816894531,11.5 5.659999847412109,15.930000305175781 2.7200000286102295,37.41999816894531 C-0.9700000286102295,64.44000244140625 29.020000457763672,77.72000122070312 52.279998779296875,70.19999694824219 C83.16999816894531,60.220001220703125 92.30000305175781,30.690000534057617 74.73999786376953,11.5 C59.130001068115234,-5.559999942779541 26.950000762939453,4.809999942779541 25.989999771118164,5.119999885559082">
-                            <animate attributeName="stroke-dasharray" from="0, 300" to="300, 0" dur="0.8s"
-                                repeatCount="1" />
-                        </path>
-                    </svg> -->
+
                     <a class="btn btn-custom me-2" href="#" data-aos="fade-down" data-aos-delay="250"
                         data-aos-once="true">
 
@@ -87,62 +81,111 @@
 
     </section>
     <section class="portfolio-section" data-aos="fade-up" data-aos-delay="250">
-        <div class="container p-4 primary rounded">
+        <div class="container p-4 primary rounded" style="backdrop-filter: blur(10px);">
             <div class="container">
-                <h2 class="text-center text-dark text-bold">
-                    Explore Our Portfolio
+                <h2 class="text-center text-dark fs-1 fw-bold">
+                    JUPS-Nomics
                 </h2>
-                <div class="row">
+                <div class="row d-flex justify-content-center">
                     <div class="col-md-4">
-                        <div class="card">
-                            <img alt="Astronaut illustration" height="200"
-                                src="https://storage.googleapis.com/a1aa/image/s2IjkOa7Pmb3DlFZpNgIIfkMBUmCZZJPyfycFTPR6FRV2OBUA.jpg"
-                                width="200" />
-                            <div class="card-body">
+                        <div class="card m-2" data-aos="fade-in" data-aos-delay="450">
+                            <div class="card-body text-center" data-aos="fade-up" data-aos-delay="450">
+                                <svg width="100" height="100" xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0"
+                                        stroke-miterlimit="4" stroke="rgb(255,255,255)" stroke-opacity="1"
+                                        stroke-width="3"
+                                        d="M32.16999816894531,11.5 C32.16999816894531,11.5 5.659999847412109,15.930000305175781 2.7200000286102295,37.41999816894531 C-0.9700000286102295,64.44000244140625 29.020000457763672,77.72000122070312 52.279998779296875,70.19999694824219 C83.16999816894531,60.220001220703125 92.30000305175781,30.690000534057617 74.73999786376953,11.5 C59.130001068115234,-5.559999942779541 26.950000762939453,4.809999942779541 25.989999771118164,5.119999885559082">
+                                        <animate attributeName="stroke-dasharray" from="0, 300" to="300, 0" dur="0.8s"
+                                            repeatCount="2" />
+                                    </path>
+                                    <text x="50" y="40" font-size="40" fill="white" font-weight="bold"
+                                        text-anchor="middle" dominant-baseline="middle">
+                                        01
+                                    </text>
+                                </svg>
+                                <h3>
+                                    Symbol
+                                </h3>
                                 <p>
-                                    <i class="fas fa-balance-scale">
-                                    </i>
-                                    Balance
-                                </p>
-                                <p>
-                                    0.00193029
+                                    $JUPS
                                 </p>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card">
-                            <img alt="Astronaut illustration" height="200"
-                                src="https://storage.googleapis.com/a1aa/image/s2IjkOa7Pmb3DlFZpNgIIfkMBUmCZZJPyfycFTPR6FRV2OBUA.jpg"
-                                width="200" />
-                            <div class="card-body">
+
+                        <div class="card m-2" data-aos="fade-in" data-aos-delay="550">
+                            <div class="card-body text-center" data-aos="fade-up" data-aos-delay="550">
+                                <svg width="100" height="100" xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0"
+                                        stroke-miterlimit="4" stroke="rgb(255,255,255)" stroke-opacity="1"
+                                        stroke-width="3"
+                                        d="M32.16999816894531,11.5 C32.16999816894531,11.5 5.659999847412109,15.930000305175781 2.7200000286102295,37.41999816894531 C-0.9700000286102295,64.44000244140625 29.020000457763672,77.72000122070312 52.279998779296875,70.19999694824219 C83.16999816894531,60.220001220703125 92.30000305175781,30.690000534057617 74.73999786376953,11.5 C59.130001068115234,-5.559999942779541 26.950000762939453,4.809999942779541 25.989999771118164,5.119999885559082">
+                                        <animate attributeName="stroke-dasharray" from="0, 300" to="300, 0" dur="0.8s"
+                                            repeatCount="2" begin="0s" />
+                                    </path>
+                                    <text x="50" y="40" font-size="40" fill="white" font-weight="bold"
+                                        text-anchor="middle" dominant-baseline="middle">
+                                        02
+                                    </text>
+                                </svg>
+                                <h3>
+                                    Token Address
+                                </h3>
                                 <p>
-                                    <i class="fas fa-hourglass-half">
-                                    </i>
-                                    Immature
-                                </p>
-                                <p>
-                                    0.00193029
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card">
-                            <img alt="Astronaut illustration" height="200"
-                                src="https://storage.googleapis.com/a1aa/image/s2IjkOa7Pmb3DlFZpNgIIfkMBUmCZZJPyfycFTPR6FRV2OBUA.jpg"
-                                width="200" />
-                            <div class="card-body">
-                                <p>
-                                    <i class="fas fa-coins">
-                                    </i>
-                                    Earning
-                                </p>
-                                <p>
-                                    0.00193029
+                                    safsa=IHjsdsisdHJHdjhJHJHjhsnkw
                                 </p>
                             </div>
                         </div>
+
+                        <div class="card m-2" data-aos="fade-in" data-aos-delay="550">
+                            <div class="card-body text-center" data-aos="fade-up" data-aos-delay="550">
+                                <svg width="100" height="100" xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0"
+                                        stroke-miterlimit="4" stroke="rgb(255,255,255)" stroke-opacity="1"
+                                        stroke-width="3"
+                                        d="M32.16999816894531,11.5 C32.16999816894531,11.5 5.659999847412109,15.930000305175781 2.7200000286102295,37.41999816894531 C-0.9700000286102295,64.44000244140625 29.020000457763672,77.72000122070312 52.279998779296875,70.19999694824219 C83.16999816894531,60.220001220703125 92.30000305175781,30.690000534057617 74.73999786376953,11.5 C59.130001068115234,-5.559999942779541 26.950000762939453,4.809999942779541 25.989999771118164,5.119999885559082">
+                                        <animate attributeName="stroke-dasharray" from="0, 300" to="300, 0" dur="0.8s"
+                                            repeatCount="2" begin="0s" />
+                                    </path>
+                                    <text x="50" y="40" font-size="40" fill="white" font-weight="bold"
+                                        text-anchor="middle" dominant-baseline="middle">
+                                        03
+                                    </text>
+                                </svg>
+                                <h3>
+                                    TAX + Liquidity
+                                </h3>
+                                <p>
+                                    + Liquidity
+                                    0/0 + Burned
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card m-2" data-aos="fade-in" data-aos-delay="550">
+                            <div class="card-body text-center" data-aos="fade-up" data-aos-delay="550">
+                                <svg width="100" height="100" xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0"
+                                        stroke-miterlimit="4" stroke="rgb(255,255,255)" stroke-opacity="1"
+                                        stroke-width="3"
+                                        d="M32.16999816894531,11.5 C32.16999816894531,11.5 5.659999847412109,15.930000305175781 2.7200000286102295,37.41999816894531 C-0.9700000286102295,64.44000244140625 29.020000457763672,77.72000122070312 52.279998779296875,70.19999694824219 C83.16999816894531,60.220001220703125 92.30000305175781,30.690000534057617 74.73999786376953,11.5 C59.130001068115234,-5.559999942779541 26.950000762939453,4.809999942779541 25.989999771118164,5.119999885559082">
+                                        <animate attributeName="stroke-dasharray" from="0, 300" to="300, 0" dur="0.8s"
+                                            repeatCount="2" begin="0s" />
+                                    </path>
+                                    <text x="50" y="40" font-size="40" fill="white" font-weight="bold"
+                                        text-anchor="middle" dominant-baseline="middle">
+                                        04
+                                    </text>
+                                </svg>
+                                <h3>
+                                    Total supply
+                                </h3>
+                                <p>
+                                    One Billion
+                                </p>
+                            </div>
+                        </div>
+                        <!--  -->
+
+
                     </div>
                 </div>
             </div>
@@ -150,59 +193,40 @@
     </section>
     <section class="services-section">
         <div class="container">
-            <h2>
-                Our Signature Services
-            </h2>
-            <div class="row">
+            <p class="text-center my-4" style="color: #a0e7e5;">
+                Who tf is Jups?
+            </p>
+            <h1 class="text-center fw-bold " style="letter-spacing: 2px;">
+                Jups, the astron behind the jupiter wif hat
+            </h1>
+            <div class="row d-flex justify-content-center">
                 <div class="col-md-4">
-                    <div class="card">
-                        <img alt="Secure Wallet Storage icon" height="100"
-                            src="https://storage.googleapis.com/a1aa/image/YQf82Y53dzwwcKlDRvmNYFnAPg3ns3LBgDK7IdEk4MiLbnAKA.jpg"
-                            width="100" />
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                Secure Wallet Storage
-                            </h5>
-                            <p class="card-text">
-                                Your crypto assets are safe with Versum Wallet, secured by top-tier encryption and
-                                multi-layered protection.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card">
-                        <img alt="Instant &amp; Low-Fee Transactions icon" height="100"
-                            src="https://storage.googleapis.com/a1aa/image/sxRerUXP0YwoEaCABOSiOsrxghuA7Wa0i2049M2qcz0MbnAKA.jpg"
-                            width="100" />
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                Instant &amp; Low-Fee Transactions
-                            </h5>
-                            <p class="card-text">
-                                Experience seamless transactions with lightning-fast processing and minimal fees to
-                                optimize your crypto management.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card">
-                        <img alt="Personalized Alerts &amp; Notifications icon" height="100"
-                            src="https://storage.googleapis.com/a1aa/image/KSelpnJLeKtz6EaOr0y19MAX1fLpdMCJWGaVWVhqzDVnsdCoA.jpg"
-                            width="100" />
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                Personalized Alerts &amp; Notifications
-                            </h5>
-                            <p class="card-text">
-                                Stay updated with instant notifications on market trends, price changes, and account
-                                security alerts directly to your dashboard.
-                            </p>
-                        </div>
+                    <div class="card" data-aos="zoom-out" data-aos-delay="250">
+                        <img alt="Secure Wallet Storage icon" height="100" src="asset/img/image 4.png" width="100" />
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="services-section">
+        <div class="container my-4">
+            <p class="text-center my-4" style="color: #a0e7e5;">
+                How did we find this?
+            </p>
+            <h1 class="text-center fw-bold " style="letter-spacing: 2px;">
+                REAL evidence of Jups under the jupiter
+            </h1>
+            <div class="row d-flex justify-content-center">
+                <div class="col-md-4">
+                    <div class="card" data-aos="zoom-out" data-aos-delay="250">
+                        <img alt="Secure Wallet Storage icon" height="100" src="asset/img/image 8.png" width="100" />
+                    </div>
+                </div>
+            </div>
+            <p>
+                sdsdsdsds
+            </p>
         </div>
     </section>
     <footer class="footer">
