--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet" />
+    <!-- Font Awesome CDN -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
     <link rel="stylesheet" href="asset/main.css">
 </head>
 
@@ -28,24 +31,24 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Analytics</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Generate</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Product</a></li>
-                    <li class="nav-item"><a class="btn btn-outline-custom" href="#">EnterApp</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#nomics">Jups Nomics</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#buy">How To Buy</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#faq">FAQ</a></li>
+                    <!-- <li class="nav-item"><a class="nav-link" href="#">Product</a></li>
+                    <li class="nav-item"><a class="btn btn-outline-custom" href="#">EnterApp</a></li> -->
                 </ul>
             </div>
         </div>
     </nav>
-    <section class="hero-section">
+    <section class="hero-section" id="home">
         <div class="container my-4">
             <div class="position-absolute top-50 start-50 translate-middle rounded-circle primary"
                 style="width: 300px; height: 300px; filter: blur(150px);"></div>
             <div class="row align-items-center">
                 <div class="col-md-6">
                     <h1 data-aos="fade-up" data-aos-delay="250">
-                        The Profit Firman Nurokhman Yuh gas fivere man
+                        The Profit
                         <span>
                             Easily!
                         </span>
@@ -80,7 +83,7 @@
         </div>
 
     </section>
-    <section class="portfolio-section" data-aos="fade-up" data-aos-delay="250">
+    <section class="portfolio-section" data-aos="fade-up" data-aos-delay="250" id="nomics">
         <div class="container p-4 primary rounded" style="backdrop-filter: blur(10px);">
             <div class="container">
                 <h2 class="text-center text-dark fs-1 fw-bold">
@@ -224,11 +227,161 @@
                     </div>
                 </div>
             </div>
-            <p>
-                sdsdsdsds
-            </p>
         </div>
     </section>
+    <section class="services-section">
+        <div class="container my-4">
+
+        </div>
+
+    </section>
+
+    <section class="services-section" id="buy">
+        <div class="container mt-4">
+            <h1 class="text-center fw-bold my-4" style="letter-spacing: 2px;">
+                how do i buy Jups now!?
+            </h1>
+            <div class="row d-flex justify-content-center">
+                <div class="col-md-6">
+                    <div class="card mb-3 bg-secondary" data-aos="zoom-out" data-aos-delay="250">
+                        <div class="card-header text-white d-flex align-items-center">
+                            <i class="fas fa-shopping-cart me-2" style="font-size: 30px;"></i>
+                            <div>
+                                <h5 class="m-0">Step One</h5>
+                                <p class="m-0" style="color: #a0e7e5;">Buy Solana</p>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <p>Buy the Solana Crypto Coin ($SOL) from a centralized exchange such as coinbase, moonpay,
+                                or (coming soon Jups Wallet)</p>
+                        </div>
+                    </div>
+                    <div class="card mb-3 bg-secondary" data-aos="zoom-out" data-aos-delay="250">
+                        <div class="card-header text-white d-flex align-items-center">
+                            <i class="fab fa-instalod me-2" style="font-size: 30px;"></i>
+                            <div>
+                                <h5 class="m-0">Step Two</h5>
+                                <p class="m-0" style="color: #a0e7e5;">Sol X Phantom</p>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <p>Install the Phantom Wallet on your mobile device or add it to your chrome extension &
+                                send the $SOL you bought from the centralized exchange to your Phantom Wallet</p>
+                        </div>
+                    </div>
+                    <div class="card mb-3 bg-secondary" data-aos="zoom-out" data-aos-delay="250">
+                        <div class="card-header text-white d-flex align-items-center">
+                            <i class="fas fa-link me-2" style="font-size: 30px;"></i>
+                            <div>
+                                <h5 class="m-0">Step Three</h5>
+                                <p class="m-0" style="color: #a0e7e5;">Connect Wallet</p>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <p>Go to Jupiter, Raydium or Birdeye & connect your Phantom Wallet</p>
+                        </div>
+                    </div>
+                    <div class="card mb-3 bg-secondary" data-aos="zoom-out" data-aos-delay="250">
+                        <div class="card-header text-white d-flex align-items-center">
+                            <i class="fas fa-exchange-alt me-2" style="font-size: 30px;"></i>
+                            <div>
+                                <h5 class="m-0">Step Four</h5>
+                                <p class="m-0" style="color: #a0e7e5;">Swap To Jups</p>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <p>Swap your $SOL for Jups using the correct contract address (HsfsdfsdfsdfdsXdqDUrUB8fqrfb
+                                J6rU9CytzscMyG7EFAe)</p>
+                        </div>
+                    </div>
+                    <div class="card mb-3 bg-secondary" data-aos="zoom-out" data-aos-delay="250">
+                        <div class="card-header text-white d-flex align-items-center">
+                            <i class="fab fa-google-wallet me-2" style="font-size: 30px;"></i>
+                            <div>
+                                <h5 class="m-0">Last Step</h5>
+                                <p class="m-0" style="color: #a0e7e5;">Let's go!</p>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <p>You're in! Enjoy the ACHI ride to the moon! We're early! New features and coin
+                                capabilities coming soon...</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="faq" class="container mt-5">
+        <h2 class="text-center mb-4">Frequently Asked Questions</h2>
+        <div class="accordion" id="faqAccordion">
+            <!-- Question 1 -->
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        What is Jups Coin?
+                    </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                    data-bs-parent="#faqAccordion">
+                    <div class="accordion-body">
+                        Jups Coin is a digital currency designed to be used in decentralized finance (DeFi)
+                        applications. It enables fast and secure transactions on the blockchain.
+                    </div>
+                </div>
+            </div>
+            <!-- Question 2 -->
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        How do I buy Jups Coin?
+                    </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                    data-bs-parent="#faqAccordion">
+                    <div class="accordion-body">
+                        To buy Jups Coin, first purchase a supported cryptocurrency such as Solana (SOL) from a
+                        centralized exchange, then trade it for Jups Coin via a decentralized exchange.
+                    </div>
+                </div>
+            </div>
+            <!-- Question 3 -->
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        How can I store my Jups Coin?
+                    </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                    data-bs-parent="#faqAccordion">
+                    <div class="accordion-body">
+                        You can store Jups Coin in a secure wallet, such as a hardware wallet or a software wallet like
+                        MetaMask or Trust Wallet.
+                    </div>
+                </div>
+            </div>
+            <!-- Question 4 -->
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingFour">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                        What is the current price of Jups Coin?
+                    </button>
+                </h2>
+                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                    data-bs-parent="#faqAccordion">
+                    <div class="accordion-body">
+                        You can check the current price of Jups Coin on various cryptocurrency tracking websites like
+                        CoinMarketCap, CoinGecko, or directly from the exchange you are using.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer class="footer">
         <div class="container">
             <div class="row">
